--- a/src/markdown.styl
+++ b/src/markdown.styl
@@ -44,7 +44,6 @@
     fw 500
     m 0.4em
     mono()
-    white-space nowrap
   h6
     c fg("faded")
   h1, h2, h3, h4, h5, h6
